--- a/BA Portal/Views/Account/Login.cshtml
+++ b/BA Portal/Views/Account/Login.cshtml
@@ -11,7 +11,6 @@
             @using (Html.BeginForm("Login", "Account", new { ReturnUrl = ViewBag.ReturnUrl }, FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
             {
                 @Html.AntiForgeryToken()
-                <h4>Use a local account to log in.</h4>
                 <hr />
                 @Html.ValidationSummary(true, "", new { @class = "text-danger" })
                 <div class="form-group">
@@ -41,9 +40,7 @@
                         <input type="submit" value="Log in" class="btn btn-default" />
                     </div>
                 </div>
-                <p>
-                    @Html.ActionLink("Register as a new user", "Register")
-                </p>
+
                 @* Enable this once you have account confirmation enabled for password reset functionality
                     <p>
                         @Html.ActionLink("Forgot your password?", "ForgotPassword")
@@ -51,12 +48,52 @@
             }
         </section>
     </div>
-    <div class="col-md-4">
-        <section id="socialLoginForm">
-            @Html.Partial("_ExternalLoginsListPartial", new ExternalLoginListViewModel { ReturnUrl = ViewBag.ReturnUrl })
-        </section>
-    </div>
+  
 </div>
+
+
+
+
+    @{
+        Random random = new Random();
+        int choose = random.Next(1, 6);
+
+        if (choose == 1)
+        {
+            <body background="~/Content/backgroundimage18.jpg">
+            </body>
+        }
+    
+        else if (choose == 2)
+        {
+            <body background="~/Content/backgroundimage28.jpg">
+            </body>
+        }
+        else if (choose == 3)
+        {
+            <body background="~/Content/backgroundimage29.jpg">
+            </body>
+        }
+        else if (choose == 4)
+        {
+            <body background="~/Content/backgroundimage22.jpg">
+            </body>
+        }
+        else if (choose == 5)
+        {
+            <body background="~/Content/backgroundimage32.jpg">
+            </body>
+        }
+        else
+        {
+            <body background="~/Content/backgroundimage29.jpg">
+            </body>
+        }
+
+
+
+    }
+
 
 @section Scripts {
     @Scripts.Render("~/bundles/jqueryval")
