--- a/BA Portal/Views/Shared/_Layout.cshtml
+++ b/BA Portal/Views/Shared/_Layout.cshtml
@@ -1,5 +1,6 @@
 ﻿<!DOCTYPE html>
 <html>
+
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,7 +9,11 @@
     @Scripts.Render("~/bundles/modernizr")
 
 </head>
+
 <body>
+@if (ViewContext.HttpContext.User.IsInRole("CanManageUsers") || ViewContext.HttpContext.User.IsInRole("CanEdit"))
+{
+
     <div class="navbar navbar-inverse navbar-fixed-top">
         <div class="container">
             <div class="navbar-header">
@@ -24,10 +29,16 @@
                     <li>@Html.ActionLink("Patients", "Index", "Patients")</li>
                     <li>@Html.ActionLink("Home", "Index", "Home")</li>
                 </ul>
+
                 @Html.Partial("_LoginPartial")
             </div>
         </div>
     </div>
+
+
+
+}
+
     <div class="container body-content">
         @RenderBody()
         <hr />
@@ -40,4 +51,5 @@
     @Scripts.Render("~/bundles/bootstrap")
     @RenderSection("scripts", required: false)
 </body>
+
 </html>
