--- a/BA Portal/Views/Account/Login.cshtml
+++ b/BA Portal/Views/Account/Login.cshtml
@@ -4,6 +4,7 @@
     ViewBag.Title = "Log in";
 }
 
+@*<div align="center"><h1>BA Portal</h1></div><br />*@
 <h2>@ViewBag.Title.</h2>
 <div class="row">
     <div class="col-md-8">
