--- a/BA Portal/Views/Home/Index.cshtml
+++ b/BA Portal/Views/Home/Index.cshtml
@@ -1,4 +1,6 @@
 ﻿@{
     ViewBag.Title = "Home Page";
 }
+<h2>Welcome to BA Portal!</h2> <br />
+The acupuncture management application for BA Natural. <br />
 
