--- a/BA Portal/Views/Account/Index.cshtml
+++ b/BA Portal/Views/Account/Index.cshtml
@@ -21,6 +21,7 @@
     <br /><br />
     <h3>List of Users:</h3> 
 
+
     @{
         int i = 0;
 
@@ -55,7 +56,7 @@
                     </td>
                     <td>
                         @user.UserName
-                        
+
 
                     </td>
                     <td></td>
@@ -73,8 +74,9 @@
 
 
     }
+
 <br />
-User Count: @ViewBag.count
+<span id="border01">User Count: @ViewBag.count</span>
 
 
 
