--- a/BA Portal/Views/PDFtestClass/Index.cshtml
+++ b/BA Portal/Views/PDFtestClass/Index.cshtml
@@ -1,4 +1,5 @@
-﻿
+﻿@model BA_Portal.Models.MyDummyModel
+
 @{
     ViewBag.Title = "Index";
     Layout = "~/Views/Shared/_Layout.cshtml";
@@ -6,5 +7,19 @@
 
 <h2>Index</h2>
 <br />
-PDF tester
+PDF tester <br />
+
+
+@Html.DisplayFor(model => model.MySignature)
+
+@Html.EditorFor(model => model.MySignature)
+
+
+@section Scripts {
+    <script src="~/Scripts/signature_pad.min.js"></script>
+    <script src="~/Scripts/SignaturePadInit.js"></script>
+}
+
+<br />
+
 
