--- a/BA Portal/Views/Shared/_Layout.cshtml
+++ b/BA Portal/Views/Shared/_Layout.cshtml
@@ -43,6 +43,7 @@
                     {
                         <li>@Html.ActionLink("Manage Users", "Index", "Account")</li>
                     }
+                    <li>@Html.ActionLink("Signatures", "Index", "Signatures")</li>
                     @*<li>@Html.ActionLink("Question Index", "Index", "DualDatabaseTestSchemeQuestions")</li>*@
 
                 </ul>
