--- a/BA Portal/Views/Subjects/Delete.cshtml
+++ b/BA Portal/Views/Subjects/Delete.cshtml
@@ -351,3 +351,7 @@
         </div>
     }
 </div>
+@section Scripts {
+    <script src="~/Scripts/signature_pad.min.js"></script>
+    <script src="~/Scripts/SignaturePadInit.js"></script>
+}
