--- a/BA Portal/Views/Subjects/Details.cshtml
+++ b/BA Portal/Views/Subjects/Details.cshtml
@@ -345,3 +345,7 @@
     @Html.ActionLink("Edit", "Edit", new { id = Model.ID }) |
     @Html.ActionLink("Back to List", "Index")
 </p>
+@section Scripts {
+    <script src="~/Scripts/signature_pad.min.js"></script>
+    <script src="~/Scripts/SignaturePadInit.js"></script>
+}
