--- a/BA Portal/Views/NewFunctionTests/Index.cshtml
+++ b/BA Portal/Views/NewFunctionTests/Index.cshtml
@@ -1,17 +1,46 @@
 ﻿
+
+
 @{
     ViewBag.Title = "Index";
-    Layout = "~/Views/Shared/_Layout.cshtml";
+    Layout = "~/Views/Shared/_LayoutwithoutNavigation.cshtml";
 }
 
-<h2>Index</h2> <br />
 
-<form action="http://localhost:49534/NewFunctionTests/OptionalParamater">
-    First name:<br>
-    <input type="text" name="teststring" value="Mickey"><br>
 
-    <input type="submit" value="Submit">
-</form>
+<h2>Index stuff</h2> <br />
+<div class="alert alert-success">
+    <a href="https://localhost:44399/NewFunctionTests/PrintIndex">Get PDF version</a>
+</div> <br />
+
+<pre>
+stufff stuff stuff stuff stufff stuff stuff stuff stufff stuff stuff stuff
+        stufff stuff stuff stuff 
+                    stufff stuff stuff stuffstufff stuff stuff stuff
+                                stufff stuff stuff stuff
+                                            stufff stuff stuff stuffstufff stuff stuff stuff
+                                                        stufff stuff stuff stuff
+
+
+</pre>
+
+<pre id="border01">
+stufff stuff stuff stuff stufff stuff stuff stuff stufff stuff stuff stuff
+stufff stuff stuff stuff 
+stufff stuff stuff stuffstufff stuff stuff stuff
+stufff stuff stuff stuff
+stufff stuff stuff stuffstufff stuff stuff 
+stufff stuff stuff stuff
+stufff stuff stuff stuffstufff stuff  
+stufff stuff stuff stuff
+stufff stuff stuff stuffstufff  
+stufff stuff stuff stuff
+</pre>
+
+            @ViewBag.date1 = date1; <br />
+            @ViewBag.date2 = date2;<br />
+            @ViewBag.date3 = date3;<br />
+            @ViewBag.date4 = date4;<br />
 
 
 
