--- a/BA Portal/Views/Subjects/Index.cshtml
+++ b/BA Portal/Views/Subjects/Index.cshtml
@@ -76,11 +76,11 @@
         </td>
         <td>
           
-                @Html.ActionLink("Insurance Form(s)", "Edit", new { id = item.ID }) |
+                @Html.ActionLink("Insurance Form(s)", "Insurance", new { id = item.ID }) |
                 <br />
-                @Html.ActionLink("Personal Information Form", "Details", new { id = item.ID }) |
+                @Html.ActionLink("Personal Information Form", "PersonalInformation", new { id = item.ID }) |
                 <br />
-                @Html.ActionLink("Soap Note(s)", "Delete", new { id = item.ID }) |
+                @Html.ActionLink("Soap Note(s)", "Soap", new { id = item.ID }) |
 
             @*
     @Html.ActionLink("Edit", "Edit", new { id=item.ID }) |
