--- a/BA Portal/Views/Account/Login.cshtml
+++ b/BA Portal/Views/Account/Login.cshtml
@@ -57,7 +57,7 @@
 
     @{
         Random random = new Random();
-        int choose = random.Next(1, 6);
+        int choose = random.Next(1, 12);
 
         if (choose == 1)
         {
@@ -83,6 +83,36 @@
         else if (choose == 5)
         {
             <body background="~/Content/backgroundimage32.jpg">
+            </body>
+        }
+        else if (choose == 6)
+        {
+            <body background="~/Content/backgroundimage1.jpg">
+            </body>
+        }
+        else if (choose == 7)
+        {
+            <body background="~/Content/backgroundimage2.jpg">
+            </body>
+        }
+        else if (choose == 8)
+        {
+            <body background="~/Content/backgroundimage3.jpg">
+            </body>
+        }
+        else if (choose == 9)
+        {
+            <body background="~/Content/backgroundimage5.jpg">
+            </body>
+        }
+        else if (choose == 10)
+        {
+            <body background="~/Content/backgroundimage6.jpg">
+            </body>
+        }
+        else if (choose == 11)
+        {
+            <body background="~/Content/backgroundimage7.jpg">
             </body>
         }
         else
