--- a/BA Portal/Views/Subjects/Index.cshtml
+++ b/BA Portal/Views/Subjects/Index.cshtml
@@ -92,6 +92,7 @@
 
             @Html.ActionLink("View Client", "Details", new { id = item.ID }) |
             @Html.ActionLink("Update Client", "Edit", new { id = item.ID }) |
+            @Html.ActionLink("Delete Client Records", "Delete", new { id = item.ID })
 
         </td>
     </tr>
