--- a/BA Portal/Views/Signatures/Details.cshtml
+++ b/BA Portal/Views/Signatures/Details.cshtml
@@ -11,13 +11,22 @@
     <h4>Signature</h4>
     <hr />
     <dl class="dl-horizontal">
+        
+        <dt>
+            @Html.DisplayNameFor(model => model.ID)
+        </dt>
         <dt>
             @Html.DisplayNameFor(model => model.MySignature)
         </dt>
 
+
+        <dd>
+            @Html.DisplayFor(model => model.ID)
+        </dd>
         <dd>
             @Html.DisplayFor(model => model.MySignature)
         </dd>
+ 
 
     </dl>
 </div>
@@ -25,3 +34,13 @@
     @Html.ActionLink("Edit", "Edit", new { id = Model.ID }) |
     @Html.ActionLink("Back to List", "Index")
 </p>
+
+
+
+
+
+
+@section Scripts {
+    <script src="~/Scripts/signature_pad.min.js"></script>
+    <script src="~/Scripts/SignaturePadInit.js"></script>
+}
