Misc. signature updates
passing multiple signature to form

--- a/BA Portal/Views/Signatures/Delete.cshtml
+++ b/BA Portal/Views/Signatures/Delete.cshtml
@@ -31,3 +31,9 @@
         </div>
     }
 </div>
+
+@section Scripts {
+    <script src="~/Scripts/signature_pad.min.js"></script>
+    <script src="~/Scripts/SignaturePadInit.js"></script>
+    @Scripts.Render("~/bundles/jqueryval")
+}
