--- a/BA Portal/Views/Signatures/Edit.cshtml
+++ b/BA Portal/Views/Signatures/Edit.cshtml
@@ -38,6 +38,9 @@
     @Html.ActionLink("Back to List", "Index")
 </div>
 
+
 @section Scripts {
+    <script src="~/Scripts/signature_pad.min.js"></script>
+    <script src="~/Scripts/SignaturePadInit.js"></script>
     @Scripts.Render("~/bundles/jqueryval")
 }
