pi from creation view all the way to being saved in database + view pdf in view
pi from creation view all the way to being saved in database + view pdf
in view

--- a/BA Portal/Views/PDFs/Details.cshtml
+++ b/BA Portal/Views/PDFs/Details.cshtml
@@ -20,12 +20,21 @@
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.PDFinbytes)
+            @Html.DisplayNameFor(model => model.GroupingID)
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.PDFinbytes)
+            @Html.DisplayFor(model => model.GroupingID)
         </dd>
+
+        <dt>
+            @Html.DisplayNameFor(model => model.Description)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.Description)
+        </dd>
+
 
     </dl>
 </div>
