--- a/BA Portal/Views/PDFs/Index.cshtml
+++ b/BA Portal/Views/PDFs/Index.cshtml
@@ -5,11 +5,7 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h2>Index</h2>
-
-<p>
-    @Html.ActionLink("Create New", "Create")
-</p>
+<h1>PDFs</h1> <br />
 <table class="table">
     <tr>
         <th>
@@ -17,6 +13,9 @@
         </th>
         <th>
             @Html.DisplayNameFor(model => model.GroupingID)
+        </th>
+        <th>
+            @Html.DisplayNameFor(model => model.Description)
         </th>
         <th></th>
     </tr>
@@ -28,6 +27,9 @@
         </td>
         <td>
             @Html.DisplayFor(model => item.GroupingID)
+        </td>
+        <td>
+            @Html.DisplayFor(model => item.Description)
         </td>
         <td>
             <strong>@Html.ActionLink("View PDF", "ReadPDFfromDatabase", new { id = item.ID })</strong> |
