--- a/BA Portal/Views/Subjects/Index.cshtml
+++ b/BA Portal/Views/Subjects/Index.cshtml
@@ -76,7 +76,7 @@
         </td>
         <td>
           
-            <strong> @Html.ActionLink("All Form(s)", "AllForms", new { id = item.ID }) </strong>
+            <strong> @Html.ActionLink("All Form(s)", "PassSubjecttoAllForms", new { id = item.ID }) </strong>
                 
 
             @*
