--- a/BA Portal/Views/PDFs/AllForms.cshtml
+++ b/BA Portal/Views/PDFs/AllForms.cshtml
@@ -8,15 +8,59 @@
 }
 
 <h1>@ViewBag.Name</h1> 
-Born: @ViewBag.DOB    <br />
-Home Phone: @ViewBag.PhoneHome     <br />
-Cell Phone: @ViewBag.PhoneCell    <br />
+
+<table>
+    <tr>
+        <td>
+            <strong>Born:</strong> @ViewBag.DOB    <br />
+            <strong>Home Phone:</strong> @ViewBag.PhoneHome     <br />
+            <strong>Cell Phone:</strong> @ViewBag.PhoneCell    <br />
+            <strong>Email:</strong> @ViewBag.Email <br />
+        </td>
+
+        <td>
+            &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+
+
+        </td>
+        
+        <td>
+            
+           
+            <strong>City:</strong> @ViewBag.City <br />
+            <strong>Has Allergy:</strong> @ViewBag.Allergy <br /> 
+            <br />
+            <br />
+
+            
+        </td>
+
+        <td>
+            &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+
+
+        </td>
+
+        <td>
+            <strong>Referred by:</strong> @ViewBag.ReferredBy <br />
+            <br />
+            <br />
+            <br />
+
+        </td>
+    </tr>
+</table>
+
 
 <br />
 <h1>All Forms</h1> 
 <br />
 
 <h3>Personal Information:</h3><br />
+@Html.ActionLink("Add new Personal Information Form", "CaptureIDandRedirectforPI", "Signatures", new { id = ViewBag.Id }, null) 
+<br />(Forms will use the client's current personal information, but requires that the practioner and the client re-sign the form).
+
+
 @{
 
     <table id="border02" class="table">
@@ -53,6 +97,7 @@ Cell Phone: @ViewBag.PhoneCell    <br />
 }
 <br />
 <h3>Insurance:</h3><br />
+@Html.ActionLink("Add new Insurance Form", "CaptureIDandRedirectforInsurance", "Signatures" , new { id = ViewBag.Id }, null)
 @{
 
     <table id="border02" class="table">
