Fixed all forms except soap
minus text scaling

--- a/BA Portal/Views/NewFunctionTests/Index.cshtml
+++ b/BA Portal/Views/NewFunctionTests/Index.cshtml
@@ -42,6 +42,11 @@ stufff stuff stuff stuff
             @ViewBag.date3 = date3;<br />
             @ViewBag.date4 = date4;<br />
 
+<br />
+Initials: @ViewBag.Initials <br />
+firstchars: @ViewBag.firstchars <br />
+my attempt : @ViewBag.firstchars3
+
 
 
 
