all pdf forms except soap updated
all pdf forms except soap updated

--- a/BA Portal/Views/PDFs/AllForms.cshtml
+++ b/BA Portal/Views/PDFs/AllForms.cshtml
@@ -202,7 +202,7 @@
                 <td>
                     <strong>@Html.ActionLink("View PDF", "ReadPDFfromDatabase", new { id = item.ID })</strong> |
                     @Html.ActionLink("Details", "Details", new { id = item.ID }) |
-                    @Html.ActionLink("DeleteAllForms", "Delete", new { id = item.ID })
+                    @Html.ActionLink("Delete", "Delete", new { id = item.ID })
                 </td>
             </tr>
         }
