Scan files added
can scan files. pdf only though.

--- a/BA Portal/Views/PDFs/AllForms.cshtml
+++ b/BA Portal/Views/PDFs/AllForms.cshtml
@@ -288,6 +288,8 @@
 
 <h3>Scanned Files:</h3><br />
 <br />
+@Html.ActionLink("Scan new file", "file", "PDFs", new { id = ViewBag.Id, RedirectIdentifier = "Scan" }, null)
+<br />
 <table id="border02" class="table">
     <tr>
         <th>
