Personal information creation visually enhanced
Personal information creation visually enhanced

--- a/BA Portal/Views/PDFs/file.cshtml
+++ b/BA Portal/Views/PDFs/file.cshtml
@@ -6,7 +6,8 @@
 
 
 
-<h2>Upload file</h2>
+<h2>Upload file</h2> <br />
+<em>PDFs only.</em>
 @using (Html.BeginForm("file", "PDFs", FormMethod.Post,
                                      new { enctype = "multipart/form-data" }))
 {
